--- a/custom-addons/estate/views/estate_property_type_views.xml
+++ b/custom-addons/estate/views/estate_property_type_views.xml
@@ -19,6 +19,15 @@
                     <group>
                         <field name="name"/>
                     </group>
+                    <group>
+                        <field name="property_ids">
+                            <tree string="Properties">
+                                <field name="name" string="Title" />
+                                <field name="expected_price" />
+                                <field name="state" />
+                            </tree>
+                        </field>
+                    </group>
                 </sheet>
             </form>
         </field>
@@ -29,7 +38,8 @@
         <field name="name">estate.property.type.tree</field>
         <field name="model">estate.property.type</field>
         <field name="arch" type="xml">
-            <tree string="Property Type">
+            <tree string="Property Type" default_order="sequence asc" >
+                <field name="sequence" widget="handle" />
                 <field name="name"/>
             </tree>
         </field>
@@ -40,6 +50,9 @@
         <field name="name">Property Types</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face"></p>
+        </field>
     </record>
 
 </odoo>
